setting for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Glints-007.github.io/Attendance-FE/",
+  "homepage": "https://Glints-007.github.io/Attendance-FE/",
   "name": "attendance-fe",
   "version": "0.1.0",
   "private": true,
