--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start:staging": "env-cmd -f .env.development react-scripts start",
-    "start:prod": "env-cmd -f .env.production react-scripts start",
+    "start": "env-cmd -f .env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
