--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "env-cmd": "^10.1.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
     "react-live-clock": "^5.2.0",
